# 10inch-contracts

./: README.md  SHARED_HTLC_DEPLOYMENT.md
near-integration/: .gitignore  CROSSCHAIN_SUCCESS_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  complete-e2e-swap.ts  complete-withdrawal-demo.ts  crosschain-near-fusionplus-swap.ts  demo-crosschain.ts  final-working-demo.ts  fresh-crosschain-swap.ts  package-lock.json  package.json  swap-state.json  test-crosschain-swap.ts  test-production-ready.ts  test-real-crosschain.ts  tsconfig.json
near-integration/scripts/: demo.ts  deploy.ts
near-integration/src/: fusion-client.ts  fusion_htlc.rs  fusion_htlc_partial.rs  fusion_htlc_simple.rs  fusion_plus.rs  lib.rs  near-fusion-sdk.ts  relayer.ts  resolver.ts
near-integration/tests/: e2e-test.ts  integration.test.ts  integration_tests.rs
stellar-integration/: .gitignore  Cargo.toml  DEPLOYMENT_SUCCESS.md  E2E_TEST_RESULTS.md  FUSION_MULTISTAGE_HTLC_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MISSION_ACCOMPLISHED.md  README.md  REALISTIC_TEST_SUMMARY.md  STELLAR_DEPLOYMENT.md  STELLAR_TEST_RESULTS.md  deployment-info-fixed.json  deployment-info.json  package-lock.json  package.json  production-ready-demo.ts  stellar-deployment.json  test-token-address.txt  tsconfig.json
stellar-integration/htlc-contract/: Cargo.toml
stellar-integration/relayer-contract/: Cargo.toml
stellar-integration/resolver-service/: .env.example  README.md  package.json
stellar-integration/scripts/: COMPLETION_STATUS.md  CROSS_CHAIN_SETUP.md  check-htlc-status.ts  complete-atomic-swap-corrected.ts  complete-atomic-swap.ts  complete-existing-swap.ts  complete-sepolia-to-stellar.sh  create-test-token.ts  demo-real-crosschain.ts  demo-resolver-service.sh  demonstrate-unified-concept.ts  deploy-fusion-htlc.ts  deploy-multi-token-contracts.sh  deploy-stellar-simple.ts  deploy-stellar.ts  deploy-test-token.sh  deploy-with-retry.sh  execute-stellar-htlc.ts  final-verification-test.ts  real-crosschain-swap.ts  test-balance-simple.ts  test-balance-tracking.ts  test-complete-crosschain-swap.ts  test-cross-chain-swap.ts  test-e2e-all-features.ts  test-fixed-contracts.ts  test-fusion-htlc.ts  test-hash-functions.ts  test-realistic-amounts.ts  test-sepolia-to-stellar.ts  test-stellar-simple.ts  test-stellar-to-sepolia.ts  (+4 more)
(+299 files in other folders)
