[package]
name = "fusion-htlc-near"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-contract-standards = "5.1.0"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
sha2 = "0.10.8"
hex = "0.4.3"

[dev-dependencies]
near-workspaces = "0.10"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
test-case = "3.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[lib]
crate-type = ["cdylib"]

[workspace]
members = []