[workspace]
members = [
    "htlc-contract",
    "relayer-contract", 
    "test-contract",
    "contracts/multi-token-htlc",
    "contracts/partial-fill-htlc",
    "contracts/fusion-htlc"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["1inch Network"]
edition = "2021"
rust-version = "1.74"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true