[package]
name = "multi-token-htlc"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true